--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
         "prettier"
     ],
     "rules": {
+      "no-console":"off",
+      "@typescript-eslint/no-unused-vars":"off",
+      "@typescript-eslint/ban-types":"off",
       "no-use-before-define": "off",
       "import/extensions": [
         "error",
